Fix assert with Qt debug builds

KFilePlacesModel creates its items delayed.
Keep the bootstrapping in case this changes.

BUG: 382542
FIXED-IN: 17.08.0